# DLSiteSpider

./: .gitignore  MANIFEST.in  release.sh  requirements.txt  setup.cfg  setup.py
DLSiteSpider/: __init__.py  dynamic.py  static.py  test_dynamic.py  test_static.py
spider/: __init__.py  static.py  test_dynamic.py  test_static.py  utils.py
