[metadata]
name = DLSiteSpider
version = 0.1.0
author = asmr-one
author_email = asmr.one@protonmail.com
description = A DLSite spider
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asmr-one/DLSiteSpider
project_urls =
    Bug Tracker = https://github.com/asmr-one/DLSiteSpider/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
